1.6.0.dev
-----------------

- remove toxbootstrap.py for now because it is broken.

- fix issue35: add new "install_command" testenv-option to configure the
  installation command with options for dep/pkg install.  Thanks Carl Meyer
  for the PR and docs.

- fix issue109 and fix issue111: multiple "-e" options are now combined
  (previously the last one would win). Thanks Anthon van der Neut.

- add --result-json option to write out detailed per-venv information
  into a json report file to be used by upstream tools.

- add new config options ``usedevelop`` and ``skipsdist`` as well as a
  command line option ``--develop`` to install the package-under-test in develop mode.
  thanks Monty Tailor for the PR.

- always unset PYTHONDONTWRITEBYTE because newer setuptools doesn't like it

- if a HOMEDIR cannot be determined, use the toxinidir.

1.5.0
-----------------

- fix issue104: use setuptools by default, instead of distribute,
  now that setuptools has distribute merged.

- make sure test commands are searched first in the virtualenv 

- re-fix issue2 - add whitelist_externals to be used in ``[testenv*]``
  sections, allowing to avoid warnings for commands such as ``make``,
  used from the commands value.

- fix issue97 - allow substitutions to reference from other sections
  (thanks Krisztian Fekete)

- fix issue92 - fix {envsitepackagesdir} to actually work again

- show (test) command that is being executed, thanks 
  Lukasz Balcerzak

- re-license tox to MIT license

- depend on virtualenv-1.9.1 

- rename README.txt to README.rst to make bitbucket happier


1.4.3
-----------------

- use pip-script.py instead of pip.exe on win32 to avoid the lock exe
  file on execution issue (thanks Philip Thiem)

- introduce -l|--listenv option to list configured environments
  (thanks  Lukasz Balcerzak)

- fix downloadcache determination to work according to docs: Only
  make pip use a download cache if PIP_DOWNLOAD_CACHE or a 